add botstrap ajax

--- a/bootstrap/resume.html
+++ b/bootstrap/resume.html
@@ -20,13 +20,13 @@ Work in MS-Office, AutoCAD, BricsCAD.</p>
 <p>PHP development     Sept.2016-Dec.2016<br>
 Source IT<br>
 Courses</p>
-<p>English             Aug 2016-Sept.2016<br>
+<p>English Aug 2016-Sept.2016<br>
 American English Centre<br>
 Courses</p>
-<p>HTML/CSS CodingJul      2016-Aug.2016<br>
+<p>HTML/CSS Coding Jul      2016-Aug.2016<br>
 Centre "Specialist"<br>
 Online courses</p>
-<p>Ukrainian State University of Railway Transport     2005-2010</p><br>
+<p>Ukrainian State University of Railway Transport     2005-2010</p>
 <h3>Technology Skills</h3>
 <p>HTML and CSS, JQuery<br>
 PHP<br>
